--- a/agriverse-backend/package.json
+++ b/agriverse-backend/package.json
@@ -16,16 +16,28 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.0.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/throttler": "^6.5.0",
+    "@prisma/client": "^5.21.0",
+    "@types/multer": "^2.0.0",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "exceljs": "^4.4.0",
+    "multer": "^2.0.2",
+    "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
-    "@prisma/client": "^5.21.0"
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -34,7 +46,10 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
+    "@types/nodemailer": "^6.4.21",
     "@types/passport-jwt": "^3.0.9",
+    "@types/qrcode": "^1.5.6",
+    "@types/speakeasy": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.0.0",
@@ -42,14 +57,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.0",
     "prisma": "^5.21.0",
-    "ts-node": "^10.9.2",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.0"
   }
 }
-
-
-
-
-
